--- a/wcott2014_demos/index.html
+++ b/wcott2014_demos/index.html
@@ -123,29 +123,246 @@ and open the template in the editor.
                         </div>
                 </section>
                 <section>
-                    <section  data-transition="none">
+                    <section><h1>It’s all a trick</h1>
+                        <p class="fragment">Alright, confession time:</p>
+                        <p class="fragment">That last page was a bit of a lie.</p>
+                    </section>
+                    <section>
+                        <p class="fragment">It does really use Masonry, but the elements were in a very specific order.</p>
+                        <h2 class="fragment">Why?</h2>
+                        <p class="fragment">Because Masonry always keeps the same order for your elements.<br />
+                            It won’t do any magic shuffling to try and fill all the gaps.<br />
+                            If I was to give it the same elements with a different order, it’ll do its best, but the result might not be what we were expecting.</p>
+                    </section>
+                    <section>
+                        <p>That’s where one of Masonry’s siblings comes in: Packery.</p>
+                        <p>Packery uses a bin-packing algorithm. The trade-off is knowing exactly where the elements will fall.</p>
+                    </section>
+                </section>
+
+                <section>
+                    <p>Let’s put our bricks aside for a bit and look at <em>how</em> we can get the content we want.</p>
+                </section>
+
+                <section>
+                    <section>
+                        <h1>Getting the content you <strong>want</strong></h1>
+                        <p class="fragment">Whether you want to get content from <em>posts</em> or even a <em>Custom Post Type</em>, the <code>WP_Query</code> class is always there to get the information for you.</p>
+                    </section>
+                    <section>
+                        <p>You might have copy-pasted some code from the Internet that uses <code>get_posts()</code> or <code>query_posts()</code>.</p>
+                        <p class="fragment">Chances are that you got <em>some</em> of the results you wanted and a whole slew of problems and weirdness that you weren’t expecting.</p>
+                    </section>
+
+                    <section>
+                        <img alt="Avoid query_posts() by Rarst.net" src="img/avoid_query_posts.png" />
+                    </section>
+
+                    <section>
+                        <p>If we’re going to be preparing custom blocks of content, let’s just do it with WP_Query.</p>
+
+                        <p class="fragment">If you check out the <a href="http://codex.wordpress.org/Class_Reference/WP_Query">codex information on WP_Query</a>, I guarantee that you will be overwhelmed.</p>
+                    </section>
+                    <section>
+                        <h1>Don’t worry. This will be (<small>mostly</small>) easy!</h1>
+
+                        <p>With the help of WP_Query we’ll be able to do things like:</p>
+                        <ul>
+                            <li class="fragment">Get me the 10 latest posts</li>
+                            <li class="fragment">Get me the 20 most recent Books (Custom Post Type)</li>
+                            <li class="fragment">Get me the last 7 posts in Category X and Y published in 2013 with the tags “awesome” and “sauce” written by “Steve”, order them by Title Descending and don’t mind the Sticky posts</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>Seem hard?</h1>
+                        <p>It all comes down to breaking up <em>what</em> you want to “ask” WordPress.</p>
+                        <p class="fragment">That’s where the <em>arguments</em> come in...</p>
+
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h1>WP_Query arguments</h1>
+                        <p>Before we even start up WP_Query, we’re going to prepare an array of arguments to pass it.</p>
+                        <p>This is how we’ll tell WP_Query <em>what</em> we want it to retrieve.</p>
+                    </section>
+                    <section>
+                        <h3>For starters, let’s go for an easy one:<br /><span class="fragment">The 10 latest posts.</span></h3>
+                        <p class="fragment">You might want to use this for a widget, a shortcode, or something else altogether.</p>
+                    </section>
+                    <section>
+                        <h2>A "10 latest posts" set of arguments</h2>
                         <pre><code class="language-php" data-trim>
 $args = array(
-    'ignore_sticky_posts' => true,  // If there are sticky posts, show them first
-    'order' => 'DESC',              // Which order should we use?
-    'orderby' => 'date',            // What are we ordering by?
-    'posts_per_page' => 10,         // How many posts do we want?
-    'post_type' => 'post',          // What type do we want? ('post', 'page', 'something_custom', ...)
-    'post_status' => 'publish',     // What status(es) are we ok with? (could be 'publish', 'pending', 'draft', ...)
+    'posts_per_page' => 10,
     );
-                                    </code></pre>
+                    </code></pre>
                     </section>
-                    <section  data-transition="none">
-                        <pre><code data-trim>
-(def lazy-fib
-  (concat
-   [0 1]
-   ((fn rfib [a b]
-        (lazy-cons (+ a b) (rfib b (+ a b)))) 0 1)))
-                                    </code></pre>
+                    <section>
+                        <pre><code class="language-php" data-trim>
+$args = array(
+    'posts_per_page' => 10,
+    );
+                    </code></pre>
+                        <p><code>posts_per_page</code> might sound weird.</p>
+                        <p>We want 10 posts.<br />That's it.<br />No <em>pages</em>.</p>
+                        <p class="fragment">All we’re actually telling it is <em>how many</em> to give us per page.<br />
+                            And we’re not using any pagination, so the result <strong><em>will</em></strong> be 10 posts.</p>
                     </section>
-                    <section>Vertical Slide 2</section>
+
+                    <section>
+                        <blockquote>
+                            <p>“But how will it know that we want ‘posts’, in descending order?</p>
+                            <p class="fragment"> - Because it can read your miiiiiind!”</p>
+
+                        </blockquote>
+                    </section>
+                    <section>
+                        <p>Actually, it’s because it has defaults.</p>
+                        <p class="fragment">Whatever arguments you omit, it will rely on its defaults when returning the information you’ve asked for.</p>
+                    </section>
+                    <section>
+                        <p>When it comes to sorting, the defaults are</p>
+                        <pre><code class="language-php" data-trim>
+$args = array(
+    'orderby'   => 'DESC',
+    'order'     => 'date',
+    );
+                    </code></pre>
+                    </section>
+                    <section>
+                        <div class="fragment">
+                            <p>If we go back to our previous arguments, sending </p>
+                            <pre><code class="language-php" data-trim>
+$args = array(
+    'posts_per_page' => 10,
+    );
+                    </code></pre>
+                        </div>
+                        <div class="fragment">
+                            <p>will result in WP_Query running</p>
+                            <pre><code class="language-php" data-trim>
+$args = array(
+    'posts_per_page'    => 10,
+    'orderby'           => 'DESC',
+    'order'             => 'date',
+    );
+                    </code></pre>
+                            <p>anyway.</p>
+                        </div>
+                    </section>
+                    <section>
+                        The more information you provide, the clearer it will be for you or anyone else reading your code.
+                        ...but PLEASE don’t go overboard.
+
+                    </section>
                 </section>
+
+                <section>
+                    <section>
+                        <h2>Enough about arguments</h2>
+                        <h1>What now?</h1>
+                        <p class="fragment">How do we go from<br /><strong>asking</strong> it for what we want to<br /><strong>displaying</strong> what we want?</p>
+                    </section>
+                    <section>
+                        <h1>Time to go a little Loopy</h1>
+                    </section>
+                    <section>
+                        <p>Up to now, we’ve prepared arguments to pass to WP_Query.</p>
+                        <pre class="fragment"><code class="language-php" data-trim>
+&lt;?php
+$args = array(
+    'posts_per_page' => 10,
+    );
+                    </code></pre>
+                        <p class="fragment">Let's feed them to the WP_Query class</p>
+                        <pre class="fragment"><code class="language-php" data-trim>
+&lt;?php
+$args = array(
+    'posts_per_page' => 10,
+    );
+
+// the query
+$the_query = new WP_Query( $args ); ?>
+                    </code></pre>
+                    </section>
+                    <section>
+                        <p>From now on, <code>$the_query</code> represents an instance of WP_Query with our arguments passed to it</p>
+                        <p class="fragment">All we need to do now, is loop through the results:</p>
+                        <pre class="fragment"><code class="language-php" data-trim>
+&lt;?php if ( $the_query->have_posts() ) : ?>
+
+  <!-- the loop -->
+  &lt;?php while ( $the_query->have_posts() ) : $the_query->the_post(); ?>
+    <h2>&lt;?php the_title(); ?></h2>
+  &lt;?php endwhile; ?>
+  <!-- end of the loop -->
+
+  &lt;?php wp_reset_postdata(); ?>
+
+&lt;?php else:  ?>
+  <p>&lt;?php _e( 'Sorry, no posts matched your criteria.', 'your_text_domain' ); ?></p>
+&lt;?php endif; ?>
+</code></pre>
+                    </section>
+                    <section>
+                        <p>In essence, we're saying:</p>
+                        <div class="fragment">
+                            <p>If you got some posts</p>
+                            <pre><code class="language-php" data-trim>
+&lt;?php if ( $the_query->have_posts() ) : ?>
+                            </code></pre>
+                        </div>
+                        <div class="fragment">
+                            <p>while you have posts, set them up for me</p>
+                            <pre><code class="language-php" data-trim>
+&lt;?php while ( $the_query->have_posts() ) : $the_query->the_post(); ?>
+                            </code></pre>
+                        </div>
+                        <div class="fragment">
+                            <p>and I'll take what I need from that information</p>
+                            <pre><code class="language-php" data-trim>
+ <h2>&lt;?php the_title(); ?></h2>
+                            </code></pre>
+                        </div>
+                    </section>
+                    <section>
+                        <p>We also have a little bit of code, in case we don't have any posts to show</p>
+                        <pre><code class="language-php" data-trim>
+&lt;?php else:  ?>
+  <p>&lt;?php _e( 'Sorry, no posts matched your criteria.', 'your_text_domain' ); ?></p>
+&lt;?php endif; ?>
+                            </code></pre>
+                        <div class="fragment">
+                            <p>Lastly, within the Loop (if we found posts), we also have a little function called <code>wp_reset_postdata()</code></p>
+                           <pre><code class="language-php" data-trim>
+  &lt;?php wp_reset_postdata(); ?>
+                            </code></pre>
+                        </div>
+                        <p class="fragment">I'm simply going to ask you to trust me and always include it.<br />
+                            It's a habit that will save you a lot of grief when dealing with anything outside your loop.</p>
+                    </section>
+                </section>
+                <section>
+
+                    <section>
+                    <h1>Are you going to show me those 10 posts or what??!?</h1>
+                    </section>
+                    <section>
+                        <h2>Let's beef up that last loop a bit.</h2>
+                 <img class="fragment" src="img/10postloop_1.png" />
+                    </section>
+                    <section>
+                        <h2>Let's look at the result:</h2>
+                        <iframe src="http://localhost/wcott2014/ten-latest-posts/" width="100%" height="650px"></iframe>
+                    </section>
+                    <section>
+                        <h2>Let's brind back our Masonry steps:</h2>
+                        <iframe src="http://localhost/wcott2014/ten-latest-posts/" width="100%" height="650px"></iframe>
+                    </section>
+                </section>
+
+
             </div>
         </div>
 
