--- a/wcott2014_demos/index.html
+++ b/wcott2014_demos/index.html
@@ -16,9 +16,9 @@ and open the template in the editor.
 
         <!-- For syntax highlighting -->
         <link rel="stylesheet" href="js/libs/reveal.js-master/lib/css/zenburn.css">
+        <link href="js/libs/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css"/>
 
         <link href="css/wcottawa.css" rel="stylesheet" type="text/css"/>
-
 
     </head>
     <body>
@@ -392,11 +392,11 @@ $the_query = new WP_Query( $args ); ?>
                     </section>
                     <section>
                         <h2>Let's look at the result:</h2>
-                        <iframe src="http://isotrope.net/wcott2014/ten-latest-posts/" width="100%" height="650px"></iframe>
+                        <iframe src="http://isotrope.net/demos/wcott2014/ten-latest-posts/" width="100%" height="650px"></iframe>
                     </section>
                     <section>
                         <h2>Let's bring back our Masonry steps:</h2>
-                        <iframe src="http://isotrope.net/wcott2014/ten-latest-posts/" width="100%" height="650px"></iframe>
+                        <iframe src="http://isotrope.net/demos/wcott2014/ten-latest-posts/" width="100%" height="650px"></iframe>
                     </section>
                 </section>
                 <section>
@@ -1280,6 +1280,28 @@ $args = array(
                     </section>
                 </section>
 
+                <section class="owl">
+                    <h1>Thank you!</h1>
+    <div id="owl-demo" class="owl-carousel">
+    <div class="item"><img class="lazyOwl" data-src="img/covers/this_one_time.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/yuno.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/making_love.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/additives.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/cheap_sturdy.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/give_designs_nudge.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/happiness.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/oop.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/influence.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/third_dimension.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/uxissux.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/jetpack.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/living_dev.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/taking_byte.jpg" alt="Lazy Owl Image"></div>
+    </div>
+
+
+                </section>
+                
             </div>
         </div>
 
@@ -1287,6 +1309,8 @@ $args = array(
         <script src="js/libs/reveal.js-master/lib/js/head.min.js"></script>
         <script src="js/libs/reveal.js-master/js/reveal.js"></script>
         <script src="js/libs/masonry/masonry.pkgd.min.js"></script>
+        
+        <script src="js/libs/owl-carousel/owl.carousel.min.js"></script>
 
         <script src="js/all_scripts.js"></script>
     </body>
