--- a/wcott2014_demos/index.html
+++ b/wcott2014_demos/index.html
@@ -25,6 +25,25 @@ and open the template in the editor.
 
         <div class="reveal">
             <div class="slides">
+            <section class="owl">
+    <div id="owl-demo" class="owl-carousel">
+    <div class="item"><img class="lazyOwl" data-src="img/covers/this_one_time.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/yuno.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/making_love.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/additives.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/cheap_sturdy.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/give_designs_nudge.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/happiness.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/oop.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/influence.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/third_dimension.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/uxissux.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/jetpack.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/living_dev.jpg" alt="Lazy Owl Image"></div>
+    <div class="item"><img class="lazyOwl" data-src="img/covers/taking_byte.jpg" alt="Lazy Owl Image"></div>
+    </div>
+
+                </section>
                 <section>
                     <h1>Down with Sliders!</h1>
                     <h1>Show them everything!</h1>
@@ -1280,26 +1299,8 @@ $args = array(
                     </section>
                 </section>
 
-                <section class="owl">
+                <section class="">
                     <h1>Thank you!</h1>
-    <div id="owl-demo" class="owl-carousel">
-    <div class="item"><img class="lazyOwl" data-src="img/covers/this_one_time.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/yuno.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/making_love.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/additives.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/cheap_sturdy.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/give_designs_nudge.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/happiness.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/oop.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/influence.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/third_dimension.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/uxissux.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/jetpack.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/living_dev.jpg" alt="Lazy Owl Image"></div>
-    <div class="item"><img class="lazyOwl" data-src="img/covers/taking_byte.jpg" alt="Lazy Owl Image"></div>
-    </div>
-
-
                 </section>
                 
             </div>
